<resources>
    <string name="app_name">movie</string>
    <string name="resume">Начать</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_answer">Отправить</string>
    <string name="result">Результат</string>
    <string name="start_welcome">Начать заново</string>
    <string name="true_answer">Поздравляю! Правильный ответ!</string>
    <string name="false_answer">Неправильный ответ! Попробуйте снова.</string>
    <string name="question_1">В каком году вышел первый фильм про Терминатора?</string>
    <string name="answer_1_1">1996</string>
    <string name="answer_1_2">1989</string>
    <string name="answer_1_3">1984</string>

    <string name="question_2">В каком году вышел фильм Титаник?</string>
    <string name="answer_2_1">1996</string>
    <string name="answer_2_2">1997</string>
    <string name="answer_2_3">1998</string>

    <string name="question_3">В каком году вышел фильм Аватар?</string>
    <string name="answer_3_1">2008</string>
    <string name="answer_3_2">2009</string>
    <string name="answer_3_3">2010</string>
    <string name="count_true_answers">Количество правильных ответов:</string>
    <string name="back">Назад</string>

</resources>