<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Poll"
     >

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="48dp"
       >

       <TextView
           android:id="@+id/question1"
           android:text="@string/question_1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="24sp"
           android:textAlignment="center"
           android:textColor="@color/my_color"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           />

       <RadioGroup
           android:id="@+id/radioGroup"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginVertical="25dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/question1">

           <RadioButton
               android:id="@+id/radioButtonOne"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/answer_1_1" />

           <RadioButton
               android:id="@+id/radioButtonTwo"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/answer_1_2" />

           <RadioButton
               android:id="@+id/radioButtonTree"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/answer_1_3" />

       </RadioGroup>

       <TextView
           android:id="@+id/question2"
           android:text="@string/question_2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="24sp"
           android:textAlignment="center"
           android:textColor="@color/my_color"
           app:layout_constraintTop_toBottomOf="@+id/radioGroup"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           />

       <RadioGroup
           android:id="@+id/radioGroup2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginVertical="25dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/question2">

           <RadioButton
               android:id="@+id/radioButtonOne2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/answer_1_1" />

           <RadioButton
               android:id="@+id/radioButtonTwo2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/answer_1_2" />

           <RadioButton
               android:id="@+id/radioButtonTree2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/answer_1_3" />

       </RadioGroup>

       <TextView
           android:id="@+id/question3"
           android:text="@string/question_3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="24sp"
           android:textAlignment="center"
           android:textColor="@color/my_color"
           app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           />

       <RadioGroup
           android:id="@+id/radioGroup3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginVertical="25dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/question3">

           <RadioButton
               android:id="@+id/radioButtonOne3"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/answer_1_1" />

           <RadioButton
               android:id="@+id/radioButtonTwo3"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/answer_1_2" />

           <RadioButton
               android:id="@+id/radioButtonTree3"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/answer_1_3" />

       </RadioGroup>

       <Button
           android:id="@+id/to_back"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="25dp"
           android:text="Назад"
           app:layout_constraintEnd_toStartOf="@+id/to_answer"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

       <Button
           android:id="@+id/to_answer"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="25dp"
           android:text="@string/to_answer"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toEndOf="@+id/to_back"
           app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

   </androidx.constraintlayout.widget.ConstraintLayout>







</ScrollView>